--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/documentai": "^7.3.1",
-    "@google-cloud/storage": "^6.11.0",
+    "@google-cloud/storage": "^6.12.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
@@ -10,6 +10,7 @@
     "mongodb": "^5.6.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
+    "path": "^0.12.7",
     "tidb": "^0.1.0",
     "uuid": "^8.3.2"
   }
